--- a/dog quiz.css
+++ b/dog quiz.css
@@ -94,19 +94,41 @@ main button:last-child {
   display: none;
 }
 
-@media (min-width: 550px) {
+@media screen and (max-width: 550px) {
+  body {
+    padding: 5px;
+  }
+
+  header {
+    font-size: 35px;
+  }
+
+  header p {
+    font-size: 30px;
+  }
+
+  img {
+    max-width: 700px;
+  }
+
   main {
-    width: 90%;
     display: flex;
     flex-direction: column;
     align-items: center;
     row-gap: 10px;
   }
 
-  button {
-    max-width: 400px;
-    width: 40vw;
+  #options {
+    width: 500px;
     margin: 0px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 20px;
+  }
+
+  button {
+    width: 400px;
   }
 
   .refresh {
